<resources>
    <string name="app_name">Docusalud</string>
    <string name="app_title">DOCUSALUD</string>
    <string name="email_title_login">Email</string>
    <string name="password_title_login">Contraseña</string>
    <string name="title_pte_info">Datos Paciente</string>
    <string name="tvName">Nombre/s</string>
    <string name="tvLastName">Apellido/s</string>
    <string name="tvDNI">Número de documento</string>
    <string name="tvDNIhint">Sin puntos ni espacios</string>
    <string name="tvFecNac">Fecha de nacimiento</string>
    <string name="etFecNacHint">DD/MM/AAAA</string>
    <string name="tvOS">Obra Social</string>
    <string name="tvOSnumber">Número de afiliado</string>
    <string name="tvSessionLimit">Límite de sesiones</string>
    <string name="tvTutorData">Nombre y apellido Tutor</string>
    <string name="btnSend">Enviar</string>
    <string name="pteAntTitle">Antecedentes personales</string>
    <string name="pte_ant_family">Composición grupo familiar</string>
    <string name="pte_ant_prenatal">Antecedentes pre-natales</string>
    <string name="pte_ant_postnatal">Antecedentes Post-natales</string>
    <string name="pte_ant_health">Condiciones de salud</string>
    <string name="pte_ant_family_relationship">Relaciones familiares</string>
    <string name="pte_ant_obs">Observaciones</string>
    <string name="hint_date">DD/MM/AAAA</string>
    <string name="pte_ant_date">Fecha última actualización</string>
    <string name="pte_ant_school">Información escolar</string>
</resources>